Code/Current/Qik/QikTemplateParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Code\you\ANTLR\QikTemplate.g4 by ANTLR 4.9.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.1")]
[System.CLSCompliant(false)]
public partial class QikTemplateParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		CONST=18, STRING=19, IDENTIFIER=20, VARIABLE=21, FLOAT=22, INT=23, WS=24, 
		COMMENT=25, LINE_COMMENT=26;
	public const int
		RULE_template = 0, RULE_ctrlDecl = 1, RULE_optionBox = 2, RULE_textBox = 3, 
		RULE_optionsBody = 4, RULE_singleOption = 5, RULE_exprDecl = 6, RULE_optExpr = 7, 
		RULE_ifOptExpr = 8, RULE_declArgs = 9, RULE_declArg = 10, RULE_expr = 11, 
		RULE_concatExpr = 12, RULE_func = 13, RULE_funcArg = 14;
	public static readonly string[] ruleNames = {
		"template", "ctrlDecl", "optionBox", "textBox", "optionsBody", "singleOption", 
		"exprDecl", "optExpr", "ifOptExpr", "declArgs", "declArg", "expr", "concatExpr", 
		"func", "funcArg"
	};

	private static readonly string[] _LiteralNames = {
		null, "'='", "'options'", "'['", "']'", "'{'", "'}'", "';'", "'text'", 
		"'return'", "','", "'option'", "'expression'", "'with'", "'if'", "'('", 
		"')'", "'+'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "CONST", "STRING", "IDENTIFIER", "VARIABLE", 
		"FLOAT", "INT", "WS", "COMMENT", "LINE_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "QikTemplate.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static QikTemplateParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public QikTemplateParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public QikTemplateParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class TemplateContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public CtrlDeclContext[] ctrlDecl() {
			return GetRuleContexts<CtrlDeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public CtrlDeclContext ctrlDecl(int i) {
			return GetRuleContext<CtrlDeclContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprDeclContext[] exprDecl() {
			return GetRuleContexts<ExprDeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprDeclContext exprDecl(int i) {
			return GetRuleContext<ExprDeclContext>(i);
		}
		public TemplateContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_template; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IQikTemplateListener typedListener = listener as IQikTemplateListener;
			if (typedListener != null) typedListener.EnterTemplate(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IQikTemplateListener typedListener = listener as IQikTemplateListener;
			if (typedListener != null) typedListener.ExitTemplate(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQikTemplateVisitor<TResult> typedVisitor = visitor as IQikTemplateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTemplate(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TemplateContext template() {
		TemplateContext _localctx = new TemplateContext(Context, State);
		EnterRule(_localctx, 0, RULE_template);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 32;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				State = 32;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
				case 1:
					{
					State = 30;
					ctrlDecl();
					}
					break;
				case 2:
					{
					State = 31;
					exprDecl();
					}
					break;
				}
				}
				State = 34;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==VARIABLE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CtrlDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public OptionBoxContext optionBox() {
			return GetRuleContext<OptionBoxContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TextBoxContext textBox() {
			return GetRuleContext<TextBoxContext>(0);
		}
		public CtrlDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ctrlDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IQikTemplateListener typedListener = listener as IQikTemplateListener;
			if (typedListener != null) typedListener.EnterCtrlDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IQikTemplateListener typedListener = listener as IQikTemplateListener;
			if (typedListener != null) typedListener.ExitCtrlDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQikTemplateVisitor<TResult> typedVisitor = visitor as IQikTemplateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCtrlDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CtrlDeclContext ctrlDecl() {
		CtrlDeclContext _localctx = new CtrlDeclContext(Context, State);
		EnterRule(_localctx, 2, RULE_ctrlDecl);
		try {
			State = 38;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 36;
				optionBox();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 37;
				textBox();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OptionBoxContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VARIABLE() { return GetToken(QikTemplateParser.VARIABLE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public DeclArgsContext declArgs() {
			return GetRuleContext<DeclArgsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public OptionsBodyContext optionsBody() {
			return GetRuleContext<OptionsBodyContext>(0);
		}
		public OptionBoxContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_optionBox; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IQikTemplateListener typedListener = listener as IQikTemplateListener;
			if (typedListener != null) typedListener.EnterOptionBox(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IQikTemplateListener typedListener = listener as IQikTemplateListener;
			if (typedListener != null) typedListener.ExitOptionBox(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQikTemplateVisitor<TResult> typedVisitor = visitor as IQikTemplateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOptionBox(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OptionBoxContext optionBox() {
		OptionBoxContext _localctx = new OptionBoxContext(Context, State);
		EnterRule(_localctx, 4, RULE_optionBox);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 40;
			Match(VARIABLE);
			State = 41;
			Match(T__0);
			State = 42;
			Match(T__1);
			State = 43;
			Match(T__2);
			State = 44;
			declArgs();
			State = 45;
			Match(T__3);
			State = 46;
			Match(T__4);
			State = 47;
			optionsBody();
			State = 48;
			Match(T__5);
			State = 49;
			Match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TextBoxContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VARIABLE() { return GetToken(QikTemplateParser.VARIABLE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public DeclArgsContext declArgs() {
			return GetRuleContext<DeclArgsContext>(0);
		}
		public TextBoxContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_textBox; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IQikTemplateListener typedListener = listener as IQikTemplateListener;
			if (typedListener != null) typedListener.EnterTextBox(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IQikTemplateListener typedListener = listener as IQikTemplateListener;
			if (typedListener != null) typedListener.ExitTextBox(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQikTemplateVisitor<TResult> typedVisitor = visitor as IQikTemplateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTextBox(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TextBoxContext textBox() {
		TextBoxContext _localctx = new TextBoxContext(Context, State);
		EnterRule(_localctx, 6, RULE_textBox);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 51;
			Match(VARIABLE);
			State = 52;
			Match(T__0);
			State = 53;
			Match(T__7);
			State = 54;
			Match(T__2);
			State = 55;
			declArgs();
			State = 56;
			Match(T__3);
			State = 57;
			Match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OptionsBodyContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SingleOptionContext[] singleOption() {
			return GetRuleContexts<SingleOptionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public SingleOptionContext singleOption(int i) {
			return GetRuleContext<SingleOptionContext>(i);
		}
		public OptionsBodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_optionsBody; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IQikTemplateListener typedListener = listener as IQikTemplateListener;
			if (typedListener != null) typedListener.EnterOptionsBody(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IQikTemplateListener typedListener = listener as IQikTemplateListener;
			if (typedListener != null) typedListener.ExitOptionsBody(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQikTemplateVisitor<TResult> typedVisitor = visitor as IQikTemplateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOptionsBody(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OptionsBodyContext optionsBody() {
		OptionsBodyContext _localctx = new OptionsBodyContext(Context, State);
		EnterRule(_localctx, 8, RULE_optionsBody);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 59;
			Match(T__8);
			State = 65;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 60;
					singleOption();
					State = 61;
					Match(T__9);
					}
					} 
				}
				State = 67;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			}
			{
			State = 68;
			singleOption();
			}
			State = 69;
			Match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SingleOptionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(QikTemplateParser.STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public DeclArgsContext declArgs() {
			return GetRuleContext<DeclArgsContext>(0);
		}
		public SingleOptionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_singleOption; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IQikTemplateListener typedListener = listener as IQikTemplateListener;
			if (typedListener != null) typedListener.EnterSingleOption(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IQikTemplateListener typedListener = listener as IQikTemplateListener;
			if (typedListener != null) typedListener.ExitSingleOption(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQikTemplateVisitor<TResult> typedVisitor = visitor as IQikTemplateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSingleOption(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SingleOptionContext singleOption() {
		SingleOptionContext _localctx = new SingleOptionContext(Context, State);
		EnterRule(_localctx, 10, RULE_singleOption);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 71;
			Match(T__10);
			State = 72;
			Match(STRING);
			State = 73;
			Match(T__2);
			State = 74;
			declArgs();
			State = 75;
			Match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExprDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VARIABLE() { return GetToken(QikTemplateParser.VARIABLE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public DeclArgsContext declArgs() {
			return GetRuleContext<DeclArgsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConcatExprContext concatExpr() {
			return GetRuleContext<ConcatExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public OptExprContext optExpr() {
			return GetRuleContext<OptExprContext>(0);
		}
		public ExprDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_exprDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IQikTemplateListener typedListener = listener as IQikTemplateListener;
			if (typedListener != null) typedListener.EnterExprDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IQikTemplateListener typedListener = listener as IQikTemplateListener;
			if (typedListener != null) typedListener.ExitExprDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQikTemplateVisitor<TResult> typedVisitor = visitor as IQikTemplateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExprDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExprDeclContext exprDecl() {
		ExprDeclContext _localctx = new ExprDeclContext(Context, State);
		EnterRule(_localctx, 12, RULE_exprDecl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 77;
			Match(VARIABLE);
			State = 78;
			Match(T__0);
			State = 79;
			Match(T__11);
			State = 80;
			Match(T__2);
			State = 81;
			declArgs();
			State = 82;
			Match(T__3);
			State = 83;
			Match(T__4);
			State = 84;
			Match(T__8);
			State = 88;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				{
				State = 85;
				concatExpr();
				}
				break;
			case 2:
				{
				State = 86;
				expr();
				}
				break;
			case 3:
				{
				State = 87;
				optExpr();
				}
				break;
			}
			State = 90;
			Match(T__6);
			State = 91;
			Match(T__5);
			State = 92;
			Match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OptExprContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VARIABLE() { return GetToken(QikTemplateParser.VARIABLE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public IfOptExprContext[] ifOptExpr() {
			return GetRuleContexts<IfOptExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public IfOptExprContext ifOptExpr(int i) {
			return GetRuleContext<IfOptExprContext>(i);
		}
		public OptExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_optExpr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IQikTemplateListener typedListener = listener as IQikTemplateListener;
			if (typedListener != null) typedListener.EnterOptExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IQikTemplateListener typedListener = listener as IQikTemplateListener;
			if (typedListener != null) typedListener.ExitOptExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQikTemplateVisitor<TResult> typedVisitor = visitor as IQikTemplateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOptExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OptExprContext optExpr() {
		OptExprContext _localctx = new OptExprContext(Context, State);
		EnterRule(_localctx, 14, RULE_optExpr);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 94;
			Match(T__12);
			State = 95;
			Match(T__1);
			State = 96;
			Match(VARIABLE);
			State = 102;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 97;
					ifOptExpr();
					State = 98;
					Match(T__9);
					}
					} 
				}
				State = 104;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			}
			State = 105;
			ifOptExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IfOptExprContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(QikTemplateParser.STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ConcatExprContext concatExpr() {
			return GetRuleContext<ConcatExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public IfOptExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ifOptExpr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IQikTemplateListener typedListener = listener as IQikTemplateListener;
			if (typedListener != null) typedListener.EnterIfOptExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IQikTemplateListener typedListener = listener as IQikTemplateListener;
			if (typedListener != null) typedListener.ExitIfOptExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQikTemplateVisitor<TResult> typedVisitor = visitor as IQikTemplateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfOptExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IfOptExprContext ifOptExpr() {
		IfOptExprContext _localctx = new IfOptExprContext(Context, State);
		EnterRule(_localctx, 16, RULE_ifOptExpr);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 107;
			Match(T__13);
			State = 108;
			Match(T__14);
			State = 109;
			Match(STRING);
			State = 110;
			Match(T__15);
			State = 111;
			Match(T__8);
			State = 114;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				{
				State = 112;
				concatExpr();
				}
				break;
			case 2:
				{
				State = 113;
				expr();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclArgsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DeclArgContext[] declArg() {
			return GetRuleContexts<DeclArgContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclArgContext declArg(int i) {
			return GetRuleContext<DeclArgContext>(i);
		}
		public DeclArgsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declArgs; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IQikTemplateListener typedListener = listener as IQikTemplateListener;
			if (typedListener != null) typedListener.EnterDeclArgs(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IQikTemplateListener typedListener = listener as IQikTemplateListener;
			if (typedListener != null) typedListener.ExitDeclArgs(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQikTemplateVisitor<TResult> typedVisitor = visitor as IQikTemplateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclArgs(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclArgsContext declArgs() {
		DeclArgsContext _localctx = new DeclArgsContext(Context, State);
		EnterRule(_localctx, 18, RULE_declArgs);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 116;
			declArg();
			State = 121;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__9) {
				{
				{
				State = 117;
				Match(T__9);
				State = 118;
				declArg();
				}
				}
				State = 123;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclArgContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(QikTemplateParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(QikTemplateParser.STRING, 0); }
		public DeclArgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declArg; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IQikTemplateListener typedListener = listener as IQikTemplateListener;
			if (typedListener != null) typedListener.EnterDeclArg(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IQikTemplateListener typedListener = listener as IQikTemplateListener;
			if (typedListener != null) typedListener.ExitDeclArg(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQikTemplateVisitor<TResult> typedVisitor = visitor as IQikTemplateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclArg(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclArgContext declArg() {
		DeclArgContext _localctx = new DeclArgContext(Context, State);
		EnterRule(_localctx, 20, RULE_declArg);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 124;
			Match(IDENTIFIER);
			State = 125;
			Match(T__0);
			State = 126;
			Match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
